# MCHammer

./: .gitignore  README.md  environment.yml  justfile  pyproject.toml  readme.rst  requirements.txt  setup.py
.github/: pull_request_template.md
.github/workflows/: publish_release.yml  tests.yml
docs/: Makefile
docs/source/: conf.py  index.rst  mch.rst  modules.rst
examples/: benzene.mol  benzene_opt.mol  benzene_opt.out  big_ligand.mol  coll_opt.out  coll_res_poc_opt.mol  collapser_example.py  collapser_result_example.py  minimum_example.py  moc.mol  moc_scipy_opt.mol  poc2_scipy_opt.mol  poc_opt.mol  poc_opt_nci.mol  poc_opt_scipy.mol  poc_scipy.mol  scipy_example.py  some_complex.mol  stk_example.py  triangle.mol
examples/benzene_mch/: coll_10.xyz  coll_14.xyz  coll_29.xyz  coll_49.xyz  coll_5.xyz  coll_57.xyz  coll_70.xyz  coll_93.xyz  mch.out
examples/benzene_traj/: traj_0.xyz  traj_15.xyz  traj_16.xyz  traj_18.xyz  traj_2.xyz  traj_22.xyz  traj_26.xyz  traj_27.xyz  traj_30.xyz  traj_36.xyz  traj_42.xyz  traj_6.xyz  traj_67.xyz  traj_74.xyz  traj_76.xyz  traj_8.xyz  traj_85.xyz  traj_90.xyz
examples/coll_poc_traj/: traj_1.xyz  traj_10.xyz  traj_11.xyz  traj_12.xyz  traj_13.xyz  traj_2.xyz  traj_3.xyz  traj_4.xyz  traj_5.xyz  traj_6.xyz  traj_7.xyz  traj_8.xyz  traj_9.xyz
examples/poc_mch/: coll_100.xyz  coll_106.xyz  coll_108.xyz  coll_111.xyz  coll_112.xyz  coll_115.xyz  coll_12.xyz  coll_120.xyz  coll_125.xyz  coll_126.xyz  coll_127.xyz  coll_128.xyz  coll_131.xyz  coll_136.xyz  coll_143.xyz  coll_144.xyz  coll_146.xyz  coll_147.xyz  coll_150.xyz  coll_155.xyz  coll_16.xyz  coll_160.xyz  coll_161.xyz  (+103 more)
mchammer/: __init__.py  angle.py  atom.py  bond.py  collapser.py  decomposed_molecule.py  factory.py  molecule.py  moves.py  optimizer.py  potential.py  radii.py  results.py  scipy_optimizer.py  substructure.py  utilities.py
tests/: conftest.py
(+192 files in other folders)
